修改了图片显示问题